TASK: Prevent the hover scrollbar from squashing content
Related to #8 and one attempt at actually fixing the issue shown there. However, this leads to some labels/icons possibly being cut, which is also not optimal (but still better than the content jumping).

--- a/DistributionPackages/Neos.DocsNeosIo/Resources/Private/Fusion/Component/Header/Header.scss
+++ b/DistributionPackages/Neos.DocsNeosIo/Resources/Private/Fusion/Component/Header/Header.scss
@@ -90,7 +90,7 @@
 
     // Only show scrollbar on hover
     &:hover {
-      overflow-y: auto;
+      overflow-y: overlay;
     }
 
 
